--- a/html/pages/touhou/clear-table/index.html
+++ b/html/pages/touhou/clear-table/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1, minimum-scale=1, user-scalable=yes'>
-  <link rel='stylesheet' type='text/css' href='./clear-table.css?20240117'>
-  <script src='./clear-table.js'></script>
+  <link rel='stylesheet' type='text/css' href='./clear-table.css?20240118'>
+  <script src='./clear-table.js?20240118'></script>
   <title>クリア機体表</title>
 </head>
 
