feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -148,6 +148,14 @@
       </ul>
     </li>
 
+    <li>
+      陰の実力者になりたくて！
+      <ul>
+        <li>陰の実力者になりたくて！</li>
+        <li>陰の実力者になりたくて！ 2nd season</li>
+      </ul>
+    </li>
+
     <li>刀語</li>
 
     <li>がっこうぐらし！</li>
@@ -807,6 +815,13 @@
       <ul>
         <li>ロウきゅーぶ！</li>
         <li>ロウきゅーぶ！SS</li>
+      </ul>
+    </li>
+
+    <li>
+      私に天使が舞い降りた！
+      <ul>
+        <li>私に天使が舞い降りた！</li>
       </ul>
     </li>
   </ul>
