feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -45,6 +45,8 @@
 
     <li>アカメが斬る！</li>
 
+    <li>アキバ冥途戦争</li>
+
     <li>アサルトリリィ BOUQUET</li>
 
     <li>Another</li>
@@ -779,6 +781,7 @@
           虹ヶ咲学園スクールアイドル同好会
           <ul>
             <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会</li>
+            <li>にじよん あにめーしょん</li>
           </ul>
         </li>
         <li>
@@ -810,6 +813,14 @@
     <li>りゅうおうのおしごと！</li>
 
     <li>Rewrite</li>
+
+    <li>
+      少女☆歌劇 レヴュースタァライト
+      <ul>
+        <li>少女☆歌劇 レヴュースタァライト</li>
+        <li>劇場版 少女☆歌劇 レヴュースタァライト</li>
+      </ul>
+    </li>
 
     <li>
       ロウきゅーぶ！
