feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -781,6 +781,8 @@
           虹ヶ咲学園スクールアイドル同好会
           <ul>
             <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会</li>
+            <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 (二期)</li>
+            <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 NEXT SKY</li>
             <li>にじよん あにめーしょん</li>
           </ul>
         </li>
