feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -36,6 +36,7 @@
           シンデレラガールズ
           <ul>
             <li>アイドルマスター シンデレラガールズ</li>
+            <li>アイドルマスター シンデレラガールズ U149</li>
           </ul>
         </li>
       </ul>
@@ -836,6 +837,7 @@
       私に天使が舞い降りた！
       <ul>
         <li>私に天使が舞い降りた！</li>
+        <li>私に天使が舞い降りた！プレシャス・フレンズ</li>
       </ul>
     </li>
   </ul>
