--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -82,7 +82,7 @@
     </li>
 
     <li>
-      ウマ娘 プリティーダービー
+      ウマ娘
       <ul>
         <li>ウマ娘 プリティーダービー</li>
         <li>ウマ娘 プリティーダービー Season 2</li>
@@ -100,7 +100,7 @@
       エヴァンゲリオン
       <ul>
         <li>
-          ヱヴァンゲリヲン新劇場版
+          新劇場版
           <ul>
             <li>ヱヴァンゲリヲン新劇場版:序</li>
             <li>ヱヴァンゲリヲン新劇場版:破</li>
@@ -371,7 +371,7 @@
     </li>
 
     <li>
-      咲-Saki-
+      咲
       <ul>
         <li>咲-Saki-</li>
         <li>咲-Saki- 阿知賀編 episode of side-A</li>
@@ -511,7 +511,7 @@
     </li>
 
     <li>
-      D.C.～ダ・カーポ～シリーズ
+      D.C.
       <ul>
         <li>D.C.～ダ・カーポ～</li>
         <li>D.C.Ⅱ～ダ・カーポⅡ～</li>
@@ -682,7 +682,7 @@
     </li>
 
     <li>
-      魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～
+      魔王学院の不適合者
       <ul>
         <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
       </ul>
@@ -763,6 +763,8 @@
     </li>
 
     <li>勇者になれなかった俺はしぶしぶ就職を決意しました。</li>
+
+    <li>勇者パーティーを追放されたビーストテイマー、最強種の猫耳少女と出会う</li>
 
     <li>
       ゆるゆり
