feat: add an anime

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -246,6 +246,7 @@
             </li>
           </ul>
         </li>
+        <li>機動戦士ガンダム 鉄血のオルフェンズ</li>
         <li>機動戦士ガンダム 閃光のハサウェイ</li>
       </ul>
     </li>
