feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -458,6 +458,8 @@
       </ul>
     </li>
 
+    <li>即死チートが最強すぎて、異世界のやつらがまるで相手にならないんですが。</li>
+
     <li>それでも町は廻っている</li>
 
     <li>
@@ -636,6 +638,8 @@
     </li>
 
     <li>ヒカルの碁</li>
+
+    <li>ひきこまり吸血姫の悶々</li>
 
     <li>
       ひぐらしのなく頃に
