feat: add an anime

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -248,6 +248,7 @@
         </li>
         <li>機動戦士ガンダム 鉄血のオルフェンズ</li>
         <li>機動戦士ガンダム 閃光のハサウェイ</li>
+        <li>機動戦士ガンダム 水星の魔女</li>
       </ul>
     </li>
 
