--- a/html/pages/misc/tips/comic/index.html
+++ b/html/pages/misc/tips/comic/index.html
@@ -17,19 +17,28 @@
   </p>
 
   <p>
-    著者(天狗)はプロの漫画家でもなければ・とりわけ漫画を描くのが上手いわけでもない。
+    私(天狗)はプロの漫画家でもなければ・とりわけ漫画を描くのが上手いわけでもない。
     従って、本記事に記載するのは一般論のみとする。
     また従って、本記事は一般論のロードマップであり、一切の新規性を持たない。
   </p>
 
   <p>
-    著者が主に所属するコミュニティは東方Projectの二次創作界隈であるため、多くの例を東方Projectの二次創作から引用する。
+    私が主に所属するコミュニティは東方Projectの二次創作界隈であるため、多くの例を東方Projectの二次創作から引用する。
+    引用した画像には、必ず右下に作者名・作品名・頁番号を記載する。
+    なるべく、作者本人がネットにサンプルとして公開しているものを引用する。
+    しかし、電子データとして流布される以上、著作権違反である恐れがある。
+    もし、不快に思った方がいれば、何らかの手段で私に連絡をして欲しい。
   </p>
+
+  <div style="text-align: center;">
+    引用元となった作品・作家様へ、最大級の敬意をここに示します。
+  </div>
 
   <h2>Index</h2>
 
   <ul>
     <li><a href="./basic/index.html">基礎知識</a></li>
+    <li><a href="./phototype/index.html">写植</a></li>
   </ul>
 </body>
 
