--- a/html/pages/misc/tips/comic/index.html
+++ b/html/pages/misc/tips/comic/index.html
@@ -38,7 +38,7 @@
 
   <ul>
     <li><a href="./basic/index.html">基礎知識</a></li>
-    <li><a href="./phototype/index.html">写植</a></li>
+    <li><a href="./phototype/index.html">写真植字</a></li>
   </ul>
 </body>
 
