--- a/html/pages/misc/tips/comic/phototype/index.html
+++ b/html/pages/misc/tips/comic/phototype/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>写植</title>
+  <title>写真植字</title>
   <link rel="stylesheet" type="text/css" href="../style.css">
 </head>
 
 <body>
-  <h1>写植</h1>
+  <h1>写真植字</h1>
 
 
 
-  <h2>写植とは</h2>
+  <h2>写真植字とは</h2>
 
   <p>
-    写植(写真植字)とは、文字を入れる作業のことである。
+    写真植字(写植)とは、文字を入れる作業のことである。
     写真植字機を用いて文章を印刷し、版下(印刷原稿のこと)に貼り付けることで文字を入れる作業に由来する。
   </p>
 
@@ -60,12 +60,12 @@
     ただし、両者共B5原稿である。
   </p>
 
-  <div style="display: flex; width: 100%;">
-    <div style="width: 50%; padding: 0.5%;">
-      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Ffontsize-01.png" width="100%">
+  <div class="two-images-container">
+    <div>
+      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Ffontsize-01.png">
     </div>
-    <div style="width: 50%; padding: 0.5%;">
-      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Ffontsize-02.png" width="100%">
+    <div>
+      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Ffontsize-02.png">
     </div>
   </div>
 
@@ -95,12 +95,12 @@
   <p>
     また、一行の長さは長くなり過ぎない方が良い。
     下は一行の長さが長い例である。
-    <span style="font-size: 0.8em; color: gray;">
+    <span class="note">
       （『見切り発車 総集編 壱』29頁目にて、れおんさん本人が自身のこの作品に対し「セリフ改行しろよ 一行どんだけ読ませるつもりだよ ふきだしほっそ!!」と語っているため取り上げました）
     </span>
   </p>
 
-  <div style="display: flex; width: 75%; margin: 0 auto;">
+  <div class="one-image-container">
       <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Flong-sentence.png">
   </div>
 
@@ -124,12 +124,12 @@
     吹き出しは交叉すべきでない。
     下は吹き出しが交叉している悪い例である。
     演出上の都合上、キャラクターの位置を交換できず、先に発言するキャラクターを左に配置せざるを得ない場合、脚本を再考すべきである。
-    <span style="font-size: 0.8em; color: gray;">
+    <span class="note">
       例は2021年に私が描いた作品である。3年前……色々拙くて恥ずかしい。
     </span>
   </p>
 
-  <div style="display: flex; width: 75%; margin: 0 auto;">
+  <div class="one-image-container">
     <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-crossing.png">
   </div>
 
@@ -139,17 +139,17 @@
     また、絵に重ねることで、メタ的な障害物として扱うことができる。
     キャラクターの表情を隠すことで不気味さを演出したり、手を描くのが億劫だからと手に重ねて消してしまったりできる。
     下はそれぞれ吹き出しに重ねる例とキャラクターに重ねる例である。
-    <span style="font-size: 0.8em; color: gray;">
+    <span class="note">
       吹き出しに重ねる例は、「文字サイズ」節・「改行」節で取り上げた例にも見られる。
     </span>
   </p>
 
-  <div style="display: flex; width: 100%;">
-    <div style="width: 50%; padding: 0.5%;">
-      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-arrangement-01.png" width="100%">
+  <div class="two-images-container">
+    <div>
+      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-arrangement-01.png">
     </div>
-    <div style="width: 50%; padding: 0.5%;">
-      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-arrangement-02.png" width="100%">
+    <div>
+      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-arrangement-02.png">
     </div>
   </div>
 
@@ -159,8 +159,31 @@
 
   <h2>吹き出しの形</h2>
 
-  <!-- TODO: 敢えて説明する必要までない -->
-  <!-- TODO: 手描きかツールか -->
+  <p>
+    吹き出しの形には、状況や内容に合わせて様々な種類がある。
+    状況や内容のうち一般的なものを列挙すると以下が挙げられる。
+  </p>
+
+  <ul>
+    <li>平常時の台詞：楕円</li>
+    <li>軽快な台詞：雲</li>
+    <li>大声の台詞：ギザギザ</li>
+    <li>機械的な台詞：長方形</li>
+    <li>モノローグ：ウニフラッシュ、二重楕円、楕円+丸しっぽ、吹き出しなし</li>
+    <li>ナレーション：長方形</li>
+  </ul>
+
+  <p>
+    作家や作品に依って下のような特殊な吹き出しもある。
+  </p>
+
+  <!-- TODO: 鈴奈庵ナレーション -->
+
+  <p>
+    吹き出しを手で描くかツールを用いるかは作家・作品・状況・内容に依る。
+    しかし、楕円に限って言えば、なるべく手で描くか揺らぎを持たせると良い。
+  </p>
+
   <!-- TODO: しっぽの有無 -->
 
 
