--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -201,6 +201,7 @@
     <li>バクマン。</li>
     <li>ばらかもん</li>
     <li>はんだくん</li>
+    <li>BanG Dream! It's MyGO!!!!!</li>
     <li>ヒカルの碁</li>
     <li>ひきこまり吸血姫の悶々</li>
     <li>ひぐらしのなく頃に</li>
@@ -224,6 +225,7 @@
     <li>ベルセルク 黄金時代篇Ⅱ ドルドレイ攻略</li>
     <li>ベルセルク 黄金時代篇Ⅲ 降臨</li>
     <li>僕だけがいない街</li>
+    <li>劇場総集編ぼっち・ざ・ろっく！ Re:</li>
     <li>WHITE ALBUM2</li>
     <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
     <li>魔法少女まどか☆マギカ</li>
