--- a/html/pages/misc/tips/comic/phototype/index.html
+++ b/html/pages/misc/tips/comic/phototype/index.html
@@ -80,8 +80,7 @@
   <h2>改行</h2>
 
   <p>
-    実は、どこで改行するかは重要な項目である。
-    昔の漫画は商業誌であっても信じられない場所で改行していることもあるが、現代ではより自然な改行を考慮されることが多い。
+    文章は自然な位置で改行すべきである。
     ここで言う「自然」というのは、文節で区切るということである。
     例えば「ある日の暮方の事である」という文章を「ある日の暮／方の事である」と区切ると不自然である。
   </p>
@@ -91,6 +90,10 @@
     一繋がりの文章が4あるいは5行以上に渡る場合、二つの吹き出しに分けると良い。
     ただし、説明文・説明口調あるいは読ませる必要のない文章はこれに限らない。
   </p>
+
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Flong-speech.png">
+  </div>
 
   <p>
     また、一行の長さは長くなり過ぎない方が良い。
@@ -121,6 +124,12 @@
   </p>
 
   <p>
+    また、原則として、吹き出しの中の文章は原稿用紙の内枠に納める。
+    特に、ノド側に外れる場合、読みにくくなる可能性が高い。
+    はみ出てしまうのは仕方ないとして、吹き出し全体が外れることは避けるべきだろう。
+  </p>
+
+  <p>
     吹き出しは交叉すべきでない。
     下は吹き出しが交叉している悪い例である。
     演出上の都合上、キャラクターの位置を交換できず、先に発言するキャラクターを左に配置せざるを得ない場合、脚本を再考すべきである。
@@ -134,7 +143,7 @@
   </div>
 
   <p>
-    吹き出しを吹き出しに重ねることで、「食い気味」な台詞を演出できる。
+    吹き出しに吹き出しを重ねることで、「食い気味」な台詞を演出できる。
     特にギャグシーンにおいて、ツッコミや意志を伝えるときに用いると良い。
     また、絵に重ねることで、メタ的な障害物として扱うことができる。
     キャラクターの表情を隠すことで不気味さを演出したり、手を描くのが億劫だからと手に重ねて消してしまったりできる。
@@ -153,14 +162,28 @@
     </div>
   </div>
 
-  <!-- TODO: 絵か吹き出しか、先に読者に伝えたい方を右に置く -->
+  <p>
+    コマの中の配置も重要である。
+    前述の通り、読者は右から左へ視線を移す。
+    そのため、右から順に、台詞→絵、絵→台詞、と配置が異なるだけで受ける印象が異なる。
+    先に読者に伝えたい情報を右に配置すべきである。
+    一般的には、次の法則に則りそうである。
+  </p>
+
+  <ul>
+    <li>平常時：台詞→その発話者</li>
+    <li>迫力を作るとき：台詞→その発話者</li>
+    <li>空間を作るとき：発話者→その台詞</li>
+    <li>コマ越のツッコミ：ツッコミ→絵</li>
+    <li>コマ内のツッコミ：絵→ツッコミ</li>
+  </ul>
 
 
 
   <h2>吹き出しの形</h2>
 
   <p>
-    吹き出しの形には、状況や内容に合わせて様々な種類がある。
+    吹き出しには、状況や内容に合わせて様々な種類がある。
     状況や内容のうち一般的なものを列挙すると以下が挙げられる。
   </p>
 
@@ -168,23 +191,36 @@
     <li>平常時の台詞：楕円</li>
     <li>軽快な台詞：雲</li>
     <li>大声の台詞：ギザギザ</li>
-    <li>機械的な台詞：長方形</li>
-    <li>モノローグ：ウニフラッシュ、二重楕円、楕円+丸しっぽ、吹き出しなし</li>
+    <li>語気の強い台詞：黒背景+白文字</li>
+    <li>機械的な台詞：長方形、多角形</li>
+    <li>モノローグ：長方形、ウニフラッシュ、二重楕円、楕円+丸しっぽ、吹き出しなし</li>
     <li>ナレーション：長方形</li>
   </ul>
 
   <p>
-    作家や作品に依って下のような特殊な吹き出しもある。
-  </p>
-
-  <!-- TODO: 鈴奈庵ナレーション -->
-
-  <p>
     吹き出しを手で描くかツールを用いるかは作家・作品・状況・内容に依る。
     しかし、楕円に限って言えば、なるべく手で描くか揺らぎを持たせると良い。
+    なるべく淡白に見せないことが重要かと思われる。
+    むしろ、装飾を凝っても読者は意識しない。
+    実際、下のような特殊な吹き出しもある。
   </p>
 
-  <!-- TODO: しっぽの有無 -->
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-odd.png">
+  </div>
+
+  <p>
+    吹き出しのしっぽは原則「発声場所」を指す。
+    普通は口を指すが、別の部位を指すことで演出することもある。
+    また、作家によっては一切しっぽを描かないこともある。
+    下はしっぽを描かない方の例である。
+    普段はしっぽを描いていても、登場人数が多い等理由でオフ台詞にならざるを得ず、誰が喋っているのかわからなくなることがある。
+    その場合は、吹き出しの中に各キャラのアイデンティティ(色やアイテム等)を描き、発話者を同定することがある。
+  </p>
+
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-tail.png">
+  </div>
 
 
   <h2>参考文献</h2>
