--- a/html/pages/misc/tips/comic/phototype/index.html
+++ b/html/pages/misc/tips/comic/phototype/index.html
@@ -118,15 +118,29 @@
 
   <p>
     しかし、右優先か上優先かに一般的な法則はない。
-    つまり、右上、左上、右下、左下に吹き出しがあった場合、右上の吹き出しの次に左上と右下どちらを読むべきかに法則はない。
+    つまり、四隅に吹き出しがあった場合、右上の吹き出しの次に左上と右下のどちらを読むべきか法則はない。
     これは読者に一瞬の混乱を招く可能性が高い。
     吹き出しの位置関係を調整することで誘導することもできるが、なるべく右下に独立した吹き出しを配置しないことが安全である。
   </p>
 
   <p>
+    右から順に、台詞→絵、絵→台詞、と配置が異なるだけで受ける印象が異なる。
+    先に読者に伝えたい情報を右に配置すべきである。
+    一般的には、次の法則に則りそうである。
+  </p>
+
+  <ul>
+    <li>平常時：台詞→その発話者</li>
+    <li>迫力を作るとき：台詞→その発話者</li>
+    <li>空間を作るとき：発話者→その台詞</li>
+    <li>コマ越のツッコミ：ツッコミ→絵</li>
+    <li>コマ内のツッコミ：絵→ツッコミ</li>
+  </ul>
+
+  <p>
     また、原則として、吹き出しの中の文章は原稿用紙の内枠に納める。
     特に、ノド側に外れる場合、読みにくくなる可能性が高い。
-    はみ出てしまうのは仕方ないとして、吹き出し全体が外れることは避けるべきだろう。
+    吹き出し全体が外れることは避けるべきだろう。
   </p>
 
   <p>
@@ -161,22 +175,6 @@
       <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fspeech-bubbles-arrangement-02.png">
     </div>
   </div>
-
-  <p>
-    コマの中の配置も重要である。
-    前述の通り、読者は右から左へ視線を移す。
-    そのため、右から順に、台詞→絵、絵→台詞、と配置が異なるだけで受ける印象が異なる。
-    先に読者に伝えたい情報を右に配置すべきである。
-    一般的には、次の法則に則りそうである。
-  </p>
-
-  <ul>
-    <li>平常時：台詞→その発話者</li>
-    <li>迫力を作るとき：台詞→その発話者</li>
-    <li>空間を作るとき：発話者→その台詞</li>
-    <li>コマ越のツッコミ：ツッコミ→絵</li>
-    <li>コマ内のツッコミ：絵→ツッコミ</li>
-  </ul>
 
 
 
