feat: update comic tips

--- a/html/pages/misc/tips/comic/basic/index.html
+++ b/html/pages/misc/tips/comic/basic/index.html
@@ -4,11 +4,25 @@
 <head>
   <meta charset="UTF-8">
   <title>基礎知識</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css?1">
 </head>
 
 <body>
   <h1>基礎知識</h1>
+
+
+
+  <h2>本の各部名称</h2>
+
+  <p>
+    頁の四辺には名称がある。
+    上を天、下を地、外を小口、内をノドと言う。
+    図に表すと以下のようである。
+  </p>
+
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fbook-space-name.png">
+  </div>
 
 
 
@@ -128,7 +142,9 @@
 
   <h2>原稿用紙</h2>
 
-  <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fgenkouyoushi.png">
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fgenkouyoushi.png">
+  </div>
 
   <p>
     原稿用紙のガイド線には、以下の表に示されるような意味がある。
