--- a/html/pages/misc/tips/comic/index.html
+++ b/html/pages/misc/tips/comic/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>漫画創作論</title>
-  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="stylesheet" type="text/css" href="./style.css?1">
 </head>
 
 <body>
@@ -23,6 +23,12 @@
   </p>
 
   <p>
+    ここに書かれているものは漫画を描く上での知識でしかなく、そのすべてを会得したところで漫画が描けるようになるわけではない。
+    あくまで漫画を描くときの助けにしてほしい。
+  </p>
+
+  <p>
+    用例として、本として出版された商業誌・同人誌から一頁を引用する。
     私が主に所属するコミュニティは東方Projectの二次創作界隈であるため、多くの例を東方Projectの二次創作から引用する。
     引用した画像には、必ず右下に作者名・作品名・頁番号を記載する。
     なるべく、作者本人がネットにサンプルとして公開しているものを引用する。
@@ -39,6 +45,7 @@
   <ul>
     <li><a href="./basic/index.html">基礎知識</a></li>
     <li><a href="./phototype/index.html">写真植字</a></li>
+    <li><a href="./direction/index.html">演出</a></li>
   </ul>
 </body>
 
