--- a/html/pages/misc/tips/comic/phototype/index.html
+++ b/html/pages/misc/tips/comic/phototype/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>写真植字</title>
-  <link rel="stylesheet" type="text/css" href="../style.css">
+  <link rel="stylesheet" type="text/css" href="../style.css?1">
 </head>
 
 <body>
@@ -49,15 +49,37 @@
     <a href="https://x.com/jump_henshubu/status/1115153285973852166">「少年ジャンプ編集部」公式のツイート</a>
   </div>
 
+  <p>
+    フォントを使わず、手で文字を描く表現方法を「描き文字」と言う。
+    主に擬音語・擬態語・特殊な台詞・叫び声・喘ぎ声等々機械的な字形では淡白だと感じるようなものに使われる。
+    次はすべてが描き文字である例である。
+    <span class="note">
+      本当に手で描いているのか、素材を使っているのかは不明だが。
+    </span>
+  </p>
+
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fhandwritefont.png">
+  </div>
 
 
   <h2>文字サイズ</h2>
 
   <p>
+    文字サイズの単位には主に次がある。
+    特に漫画では「Q」が用いられることが多い。
+  </p>
+  
+  <ul>
+    <li>pt: 1/72 inch</li>
+    <li>Q: 1/4 mm</li>
+  </ul>
+
+  <p>
     文字の大きさは個人差に依るところが大きい。
-    平常時の文字サイズでも、一般的に8ptから12ptまで幅がある。
+    平常時の文字サイズでも、一般的に12Qから18Qまで幅がある。
     下はそれぞれ下限と上限の例である。
-    ただし、両者共B5原稿である。
+    ただし、両者共仕上がりサイズはB5である。
   </p>
 
   <div class="two-images-container">
@@ -71,9 +93,42 @@
 
   <p>
     フォントサイズもフォントの種類と同様、状況や内容によって変わる。
-    平常時でも、例えば9ptを貫く必要はない。
+    例えば、平常時は必ず15Qにしようと決める必要はない。
     後述する改行や段落分けの方が重要である。
   </p>
+
+  <p>
+    ちなみに、少し調べると「<i>漫画では一般的に18Qが用いられる</i>」という主張が見られる。
+    しかし、これは縮小率を予め考慮したサイズであることに注意しなければならない。
+    少年ジャンプを例に挙げると、下のようになる。
+    <span class="note">
+      少年ジャンプではB4原稿に描くらしい。
+      B4原稿の仕上がりサイズはA4であるため、下にはA4のサイズを記載した。
+    </span>
+  </p>
+
+  <table>
+    <tr>
+      <th>媒体</th>
+      <th>媒体サイズ</th>
+      <th>文字サイズ</th>
+    </tr>
+    <tr>
+      <td>原稿</td>
+      <td>A4 (210x297mm)</td>
+      <td>18Q</td>
+    </tr>
+    <tr>
+      <td>週刊誌</td>
+      <td>B5 (182x257mm)</td>
+      <td>16Q弱</td>
+    </tr>
+    <tr>
+      <td>単行本</td>
+      <td>新書 (112x174mm)</td>
+      <td>10Q弱</td>
+    </tr>
+  </table>
 
 
 
@@ -224,6 +279,7 @@
   <h2>参考文献</h2>
 
   <ul>
+    <li><a href="https://www.jump-mangasho.com/chair/image/treasure/furudate_treasure_no112/112bigimg03/">漫画賞講座 目指せ!! 原稿用紙上の王様!! 第3回「縮小率とQ数」編</a></li>
     <li><a href="https://comic.smiles55.jp/guide/10094/">漫画の吹き出しのコツ！フキダシの基本を知って読まれる漫画へ</a></li>
   </ul>
 
