feat: update comic tips

--- a/html/pages/misc/tips/comic/direction/index.html
+++ b/html/pages/misc/tips/comic/direction/index.html
@@ -44,7 +44,7 @@
     </tr>
     <tr>
       <td>あるキャラが心を通わせていく</td>
-      <td>そのキャラの幸せそうな顔をする</td>
+      <td>そのキャラの幸せそうな顔</td>
     </tr>
     <tr>
       <td>あるキャラへ軍配が上がっていく</td>
@@ -144,7 +144,7 @@
     作者視点に立つと、効果線は一見<b>あざとい</b>ように感じるかもしれない。
     しかし、読者はあまり意識していないので、臆せず積極的に用いると良い。
     下は効果線を多用する方の例である。
-    すべてのコマに効果線が入っているが、特別違和感を覚えることなく読める。
+    すべてのコマに効果線が入っているが、むしろカオスの勢いを強調し面白さに拍車がかかっている。
     <span class="note">
       1コマが横に長いため、1コマ内の時間が長く、1コマ内でもテンションに差が生じている。
       特に、3コマ目の流線の影響先は、犬走椛(刀を持ったキャラ)でも射命丸文(流線に重なっているキャラ)でもなく、流線に重なっている台詞と効果音である。
@@ -158,11 +158,9 @@
   <p>
     物体や物体の影を適切に線で描くことで、効果線の効果を生むこともできる。
     次の1コマ目がその例である。
-    <span class="note">
-      1コマ目には狭義の効果線が引かれていない。
-      全体を漠然と捉えると、交通事故寸前の一瞬をカメラで撮影したかのような<b>静止</b>した印象を受ける。
-      しかし、それと同時に、車や地面に流線が引かれているため、心がそわそわするような<b>脈動感</b>を持っている。
-    </span>
+    1コマ目には狭義の効果線が引かれていない。
+    全体を漠然と捉えると、交通事故寸前の一瞬をカメラで撮影したかのような<b>静止</b>した印象を受ける。
+    しかし、それと同時に、車や地面に流線が引かれているため、心がそわそわするような<b>脈動感</b>を持っている。
   </p>
 
   <div class="one-image-container">
@@ -218,6 +216,46 @@
   </table>
 
   <!-- TODO: 『ゆうゆういをうり』ラスト ? -->
+
+
+
+  <h2>撮影</h2>
+
+  <p>
+    キャラ全体をグレー・トーンで暗くすることで、シリアスな雰囲気を演出できる。
+    <span class="note">
+      切迫、逆光、乖離の表現と捉えられるのだろう。
+    </span>
+  </p>
+
+  <div class="one-image-container">
+    <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fgray-covering.png">
+  </div>
+
+  <p>
+    逆に、キャラの色を薄くすることで、淡い雰囲気を出せる。
+    下はその例である。
+    さらに、キャラ全体を薄くすることで、<b>特別なコマ</b>を強調できる。
+    下の右はその例である。
+    <span class="note">
+      近年の荒木飛呂彦先生の作品では、例のような焦燥や逡巡のシーンだけでなく、格言や迫力のシーン、フォーカスの当たっていない物体を描くときに多用されている。
+    </span>
+  </p>
+
+  <div class="two-images-container">
+    <div>
+      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fwhite.png">
+    </div>
+    <div>
+      <img src="https://img.skdassoc.work/pages%2Fmisc%2Ftips%2Fcomic%2Fwhite-out.png">
+    </div>
+  </div>
+
+  <p>
+    また、シルエットをぼかしたり・上にトーンを貼ることで、エモーショナルな雰囲気を演出できる。
+  </p>
+
+  <!-- TODO: 例が欲しい。スキャンでは飛んでしまうので電子データを参照する必要がある -->
 
 
 
@@ -357,6 +395,7 @@
     <li>キャラが移動してイマジナリーラインを越える</li>
     <li>対話者の位置関係がわかる情報(背景や道具等)を描いた上でイマジナリーラインを越える</li>
     <li>ある物体を中心に回転しイマジナリーラインを越える</li>
+    <li>手前・奥の関係を保ったままイマジナリーラインを超える</li>
   </ul>
 
   <!-- TODO: 『WEAK POINT2』 ? -->
@@ -365,7 +404,7 @@
     <span class="note">
       本段落は持論であるため注釈として書く。
       漫画はかなりイマジナリーライン越えに寛容である。
-      上に示した方法の他に、「頁を移る」「背後に回る」「前のコマで下手にいたキャラを次(横隣)のコマで左右反転させて上手に置く」「前のコマで注目される下手のキャラを次(下段)のコマの上手に置く」等が挙げられる。
+      上に示した方法の他に、「頁を移る」「背後に回る」「前のコマで注目される下手のキャラを次(下段)のコマの上手に置く」等が挙げられる。
       これらがなぜ成立するかというと、読者の視線を乱していないからである。
       逆に言えば、描かれるべきキャラ・向きが明瞭であるとき、それに違うものを描いたときに混乱するのである。
       そして、そのようなレイアウトにしなければ、なんでも許されるのである。
