--- a/html/pages/misc/tips/comic/index.html
+++ b/html/pages/misc/tips/comic/index.html
@@ -16,6 +16,16 @@
     特に同人漫画を描く上で役に立ちそうな理論をまとめたHTML文書。
   </p>
 
+  <h2>Index</h2>
+
+  <ul>
+    <li><a href="./basic/index.html">基礎知識</a></li>
+    <li><a href="./phototype/index.html">写真植字</a></li>
+    <li><a href="./direction/index.html">演出</a></li>
+  </ul>
+
+  <h2>ATTENTION</h2>
+
   <p>
     私(天狗)はプロの漫画家でもなければ・とりわけ漫画を描くのが上手いわけでもない。
     従って、本記事に記載するのは一般論のみとする。
@@ -23,7 +33,7 @@
   </p>
 
   <p>
-    ここに書かれているものは漫画を描く上での知識でしかなく、そのすべてを会得したところで漫画が描けるようになるわけではない。
+    ここに書かれているものは漫画を描く上での基礎理論でしかなく、そのすべてを会得したところで漫画が描けるようになるわけではない。
     あくまで漫画を描くときの助けにしてほしい。
   </p>
 
@@ -39,14 +49,6 @@
   <div style="text-align: center;">
     引用元となった作品・作家様へ、最大級の敬意をここに示します。
   </div>
-
-  <h2>Index</h2>
-
-  <ul>
-    <li><a href="./basic/index.html">基礎知識</a></li>
-    <li><a href="./phototype/index.html">写真植字</a></li>
-    <li><a href="./direction/index.html">演出</a></li>
-  </ul>
 </body>
 
 </html>
