--- a/html/pages/misc/tips/comic/phototype/index.html
+++ b/html/pages/misc/tips/comic/phototype/index.html
@@ -154,7 +154,7 @@
     また、一行の長さは長くなり過ぎない方が良い。
     下は一行の長さが長い例である。
     <span class="note">
-      （『見切り発車 総集編 壱』29頁目にて、れおんさん本人が自身のこの作品に対し「セリフ改行しろよ 一行どんだけ読ませるつもりだよ ふきだしほっそ!!」と語っているため取り上げました）
+      （『見切り発車 総集編 壱』29頁目にて、れおん先生本人が自身のこの作品に対し「セリフ改行しろよ 一行どんだけ読ませるつもりだよ ふきだしほっそ!!」と語っているため取り上げました）
     </span>
   </p>
 
