feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -254,6 +254,8 @@
     <li>ゆるゆり</li>
     <li>ゆるゆり♪♪</li>
     <li>ゆるゆり さん☆ハイ！</li>
+    <li>大室家 dear sisters</li>
+    <li>大室家 dear friends</li>
     <li>落第騎士の英雄譚</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 (二期)</li>
