feat: add animes

--- a/html/pages/misc/watched-animes/index.html
+++ b/html/pages/misc/watched-animes/index.html
@@ -109,6 +109,7 @@
     <li>ハロー！！きんいろモザイク</li>
     <li>金装のヴェルメイユ～崖っぷち魔術師は最強の厄災と魔法世界を突き進む～</li>
     <li>クビキリサイクル</li>
+    <li>くまクマ熊ベアー</li>
     <li>CLANNAD</li>
     <li>CLANNAD AFTER STORY</li>
     <li>CLANNAD 夏休みの出来事 (OVA)</li>
@@ -256,6 +257,7 @@
     <li>ゆるゆり さん☆ハイ！</li>
     <li>大室家 dear sisters</li>
     <li>大室家 dear friends</li>
+    <li>幼女戦記</li>
     <li>落第騎士の英雄譚</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 (二期)</li>
