--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -259,6 +259,7 @@
     <li>劇場総集編ぼっち・ざ・ろっく！ Re:</li>
     <li>WHITE ALBUM2</li>
     <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
+    <li>魔王の俺が奴隷エルフを嫁にしたんだが、どう愛でればいい？</li>
     <li>魔法少女まどか☆マギカ</li>
     <li>魔法科高校の劣等生</li>
     <li>迷家-マヨイガ-</li>
@@ -289,11 +290,17 @@
     <li>大室家 dear friends</li>
     <li>幼女戦記</li>
     <li>落第騎士の英雄譚</li>
+    <li>ラブライブ！</li>
+    <li>ラブライブ！（二期）</li>
+    <li>ラブライブ！The School Idol Movie</li>
+    <li>ラブライブ！サンシャイン!!</li>
+    <li>ラブライブ！サンシャイン!!（二期）</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 (二期)</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 NEXT SKY</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 完結編 第一章</li>
     <li>にじよん あにめーしょん</li>
+    <li>にじよん あにめーしょん2</li>
     <li>ラブライブ!スーパースター!!</li>
     <li>ラブライブ!スーパースター!! (二期)</li>
     <li>Re:ゼロから始める異世界生活</li>
