feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -66,6 +66,7 @@
     <li>あの日見た花の名前を僕達はまだ知らない。</li>
     <li>アブソリュート・デュオ</li>
     <li>甘城ブリリアントパーク</li>
+    <li>異世界失格</li>
     <li>異世界はスマートフォンとともに。</li>
     <li>いちばんうしろの大魔王</li>
     <li>頭文字D First Stage</li>
