feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -75,6 +75,7 @@
     <li>ウマ娘 プリティーダービー</li>
     <li>ウマ娘 プリティーダービー Season 2</li>
     <li>AIR</li>
+    <li>英雄王、武を極めるため転生す 〜そして、世界最強の見習い騎士♀〜</li>
     <li>ヱヴァンゲリヲン新劇場版:序</li>
     <li>ヱヴァンゲリヲン新劇場版:破</li>
     <li>ヱヴァンゲリヲン新劇場版:Q</li>
@@ -83,6 +84,7 @@
     <li>エロマンガ先生</li>
     <li>Angel Beats!</li>
     <li>お兄ちゃんはおしまい！</li>
+    <li>俺だけ入れる隠しダンジョン 〜こっそり鍛えて世界最強</li>
     <li>俺の妹がこんなに可愛いわけがない</li>
     <li>俺の妹がこんなに可愛いわけがない。</li>
     <li>カーニバル・ファンタズム</li>
@@ -141,6 +143,7 @@
     <li>金装のヴェルメイユ～崖っぷち魔術師は最強の厄災と魔法世界を突き進む～</li>
     <li>クビキリサイクル</li>
     <li>くまクマ熊ベアー</li>
+    <li>くまクマ熊ベアーぱーんち！</li>
     <li>CLANNAD</li>
     <li>CLANNAD AFTER STORY</li>
     <li>CLANNAD 夏休みの出来事 (OVA)</li>
