feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -69,6 +69,7 @@
     <li>異世界失格</li>
     <li>異世界はスマートフォンとともに。</li>
     <li>いちばんうしろの大魔王</li>
+    <li>一瞬で治療していたのに役立たずと追放された天才治癒師、闇ヒーラーとして楽しく生きる</li>
     <li>頭文字D First Stage</li>
     <li>頭文字D Second Stage</li>
     <li>頭文字D Third Stage</li>
