feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -261,6 +261,7 @@
     <li>ベルセルク 黄金時代篇Ⅱ ドルドレイ攻略</li>
     <li>ベルセルク 黄金時代篇Ⅲ 降臨</li>
     <li>僕だけがいない街</li>
+    <li>ぼくらの</li>
     <li>劇場総集編ぼっち・ざ・ろっく！ Re:</li>
     <li>WHITE ALBUM2</li>
     <li>魔王学院の不適合者 ～史上最強の魔王の始祖、転生して子孫たちの学校へ通う～</li>
