feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -68,6 +68,7 @@
     <li>甘城ブリリアントパーク</li>
     <li>異世界失格</li>
     <li>異世界はスマートフォンとともに。</li>
+    <li>異世界迷宮でハーレムを</li>
     <li>いちばんうしろの大魔王</li>
     <li>一瞬で治療していたのに役立たずと追放された天才治癒師、闇ヒーラーとして楽しく生きる</li>
     <li>頭文字D First Stage</li>
@@ -81,6 +82,7 @@
     <li>ヱヴァンゲリヲン新劇場版:破</li>
     <li>ヱヴァンゲリヲン新劇場版:Q</li>
     <li>シン・エヴァンゲリオン劇場版𝄇</li>
+    <li>Aランクパーティを離脱した俺は、元教え子たちと迷宮深部を目指す。</li>
     <li>えむえむっ！</li>
     <li>エロマンガ先生</li>
     <li>Angel Beats!</li>
@@ -132,6 +134,7 @@
     <li>機動戦士ガンダム 鉄血のオルフェンズ</li>
     <li>機動戦士ガンダム 閃光のハサウェイ</li>
     <li>機動戦士ガンダム 水星の魔女</li>
+    <li>勘違いの工房主〜英雄パーティの元雑用係が、実は戦闘以外がSSSランクだったというよくある話〜</li>
     <li>君の名は。</li>
     <li>虐殺器官</li>
     <li>逆境無頼カイジ</li>
@@ -166,6 +169,7 @@
     <li>GOSICK-ゴシック-</li>
     <li>ご注文はうさぎですか？</li>
     <li>小林さんちのメイドラゴン</li>
+    <li>最近雇ったメイドが怪しい</li>
     <li>PSYCHO-PASS</li>
     <li>PSYCHO-PASS 2</li>
     <li>PSYCHO-PASS (劇場版)</li>
