feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -98,6 +98,7 @@
     <li>陰の実力者になりたくて！ 2nd season</li>
     <li>刀語</li>
     <li>がっこうぐらし！</li>
+    <li>神々の山嶺</li>
     <li>神のみぞ知るセカイ</li>
     <li>神のみぞ知るセカイ Ⅱ</li>
     <li>神のみぞ知るセカイ 4人とアイドル</li>
@@ -212,6 +213,7 @@
     <li>D.C.～ダ・カーポ～</li>
     <li>D.C.Ⅱ～ダ・カーポⅡ～</li>
     <li>盾の勇者の成り上がり</li>
+    <li>たとえばラストダンジョン前の村の少年が序盤の街で暮らすような物語</li>
     <li>ダンジョンに出会いを求めるのは間違っているだろうか</li>
     <li>旦那が何を言っているかわからない件</li>
     <li>超次元ゲイム ネプテューヌ</li>
