feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -187,6 +187,7 @@
     <li>屍者の帝国</li>
     <li>citrus</li>
     <li>史上最強の大魔王、村人Aに転生する</li>
+    <li>失格紋の最強賢者</li>
     <li>Charlotte</li>
     <li>STEINS;GATE</li>
     <li>STEINS;GATE 横行跋扈のポリオマニア (25話)</li>
