feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -162,6 +162,8 @@
     <li>けいおん！！</li>
     <li>月曜日のたわわ</li>
     <li>けものフレンズ</li>
+    <li>甲鉄城のカバネリ</li>
+    <li>甲鉄城のカバネリ 海門決戦</li>
     <li>コードギアス 反逆のルルーシュ</li>
     <li>コードギアス 反逆のルルーシュ R2</li>
     <li>コードギアス 反逆のルルーシュⅠ 興道</li>
