feat: アニメを追加

--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -219,6 +219,7 @@
     <li>たとえばラストダンジョン前の村の少年が序盤の街で暮らすような物語</li>
     <li>ダンジョンに出会いを求めるのは間違っているだろうか</li>
     <li>旦那が何を言っているかわからない件</li>
+    <li>チ。 ―地球の運動について―</li>
     <li>超次元ゲイム ネプテューヌ</li>
     <li>デート・ア・ライブ</li>
     <li>デート・ア・ライブⅡ</li>
