--- a/src/pages/pages/misc/watched-animes/index.html
+++ b/src/pages/pages/misc/watched-animes/index.html
@@ -315,10 +315,12 @@
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 (二期)</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 NEXT SKY</li>
     <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 完結編 第一章</li>
+    <li>ラブライブ！虹ヶ咲学園スクールアイドル同好会 完結編 第二章</li>
     <li>にじよん あにめーしょん</li>
     <li>にじよん あにめーしょん2</li>
     <li>ラブライブ!スーパースター!!</li>
     <li>ラブライブ!スーパースター!! (二期)</li>
+    <li>ラブライブ!スーパースター!! (三期)</li>
     <li>Re:ゼロから始める異世界生活</li>
     <li>リトルバスターズ！</li>
     <li>リトルバスターズ！～Refrain～</li>
